--- a/src/app/App.css
+++ b/src/app/App.css
@@ -18,19 +18,13 @@
 }
 
 .logo {
-  height: 32px;
+  width: 120px;
+  height: 31px;
   background: rgba(255, 255, 255, 0.2);
-  margin: 16px;
-}
-
-.site-layout-sub-header-background {
-  background: #fff;
+  margin: 16px 28px 16px 0;
+  float: left;
 }
 
 .site-layout-background {
   background: #fff;
-}
-
-[data-theme='dark'] .site-layout-sub-header-background {
-  background: #141414;
 }
