--- a/src/features/course/ModuleTests.scss
+++ b/src/features/course/ModuleTests.scss
@@ -19,3 +19,31 @@
   color: rgba(255, 255, 255, 0.65);
   // padding-top: 80px;
 }
+
+.tests {
+  text-align: left;
+
+  &-header {
+    padding: 12px 24px;
+    border-bottom: 1px solid #f0f0f0;
+  }
+
+  &-content {
+    li {
+      padding: 12px 24px;
+      // display: block;
+    }
+  }
+
+  &-footer {
+    padding: 12px 24px;
+  }
+}
+
+.item--error {
+  border-bottom: solid 2px red;
+}
+
+.item--success {
+  border-bottom: solid 2px green;
+}
