--- a/src/features/course/ModuleTests.scss
+++ b/src/features/course/ModuleTests.scss
@@ -28,7 +28,7 @@
     border-bottom: 1px solid #f0f0f0;
   }
 
-  &-tags {
+  &-commonOptions {
     margin: 12px;
     padding: 12px 24px;
     border: 1px solid #000;
@@ -54,12 +54,12 @@
     }
   }
 
-  &-article_title {
+  &-title, &-articleTitle {
     text-align: center;
     padding: 12px 24px;
   }
 
-  &-article_content {
+  &-articleContent {
     line-height: 36px;
     padding-left: 24px;
     padding-right: 24px;
@@ -67,6 +67,10 @@
 
   &-orderedList {
     padding: 12px 24px;
+
+    li {
+      padding: 12px 24px;
+    }
   }
 
   &-matches {
