--- a/src/features/course/layouts/Layout.module.scss
+++ b/src/features/course/layouts/Layout.module.scss
@@ -1,23 +1,20 @@
-.article__content {
+@mixin line-height {
   line-height: 36px;
-  padding-left: 24px;
-  padding-right: 24px;
 }
 
-.grid {
-  display: grid;
-  padding: 12px 24px;
-  grid-template-columns: 100%;
-}
+.article__content {
+  @include line-height;
 
-.grid__cell {
-  padding: 12px 24px;
+  label {
+    margin-right: 6px;
+    white-space: pre-wrap;
+  }
 }
 
 .list {
-  padding: 12px 24px;
+  padding-left: 24px;
 
   li {
-    padding: 12px 24px;
+    @include line-height;
   }
 }
